# eden

./: .env.example  .env.test  .gitignore  ADMIN_AUTHENTICATION_IMPLEMENTATION.md  ADMIN_DASHBOARD_GUIDE.md  ADMIN_DASHBOARD_IMPLEMENTATION.md  ADMIN_FIX_SUMMARY.md  AUDIT_COMPREHENSIVE.md  AUDIT_FINDINGS.md  AUDIT_REPORT.md  AUDIT_SUMMARY.md  AUTHENTICATION_GUIDE.md  AUTH_IMPLEMENTATION_COMPLETE.md  CHANGE_SUMMARY.md  CODEBASE_AUDIT_REPORT.md  COMPLETION_CERTIFICATE.txt  COMPLETION_CHECKLIST.md  COMPLETION_REPORT_FEATURES_13_14.py  COMPONENT_GUIDE.md  COMPREHENSIVE_CODEBASE_AUDIT.md  CONTRIBUTING.md  CSRF_FIXES_VERIFICATION.md  CUSTOM_ERROR_PAGE_FIX.md  DELIVERY_SUMMARY.md  DEPENDENCY_INJECTION_FIXES.md  DEPENDENCY_INJECTION_QUICK_REFERENCE.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_READY_REPORT.md  DIRECTIVES_AUDIT_FINAL_REPORT.md  DIRECTIVES_AUDIT_REPORT.md  DIRECTIVES_IMPLEMENTATION_COMPLETE.md  DOCUMENTATION_AUDIT_REPORT.md  DOCUMENTATION_PLAN.md  EDEN_BUILTIN_FILTERS_REFERENCE.md  EDEN_DOCUMENTATION_INDEX.md  EDEN_ENGINE_QUICK_REFERENCE.md  EDEN_INTERNATIONAL_LOCALIZATION_GUIDE.md  EDEN_SYNTAX_DECISION_FINAL.md  EDEN_SYNTAX_STANDARDIZATION.md  EDEN_SYNTAX_STANDARD_FINAL.md  (+416 more)
.agent/scratch/: test_csrf.py  test_login_flow.py
.agent/workflows/: debug_sentinel.md  expand_docs.md  implement_feature.md  security_audit.md  verify_implementation.md
.github/: copilot-instructions.md  eden.instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/agents/: agent1.agent.md
app/: support_app.py
artifacts/: admin_error_preview.html  debug_page_preview.html
docs/: BACKGROUND_WORKERS.md  TEMPLATE_DIRECTIVES.md  cleanup_summary.md  donextondocs.md  getting_started.md  index.md
eden/: __init__.py  __main__.py  admin_error_handler.py  analytics.py  api_standards.py  app.py  apscheduler_backend.py  assets.py  bootstrappers.py  config.py  context.py  context_middleware.py  dependencies.py  design.py  di_guide.py  diagnostics.py  error_handlers.py  error_middleware.py  errors.py  exceptions.py  flags.py  flags_db.py  forms.py  htmx.py  i18n.py  logging.py  messages.py  middleware.py  migrations.py  openapi.py  orm.py  port.py  realtime.py  requests.py  resources.py  responses.py  routing.py  satellite.py  scheduler_db.py  services.py  (+10 more)
eden_engine/: PHASE_1_COMPLETE.md  __init__.py
eden_orm/: __init__.py  admin.py  aggregation.py  audit.py  base.py  bulk.py  bulk_update_returning.py  cache.py  connection.py  distinct.py  executor.py  field_selection.py  fields.py  lazy_loading.py  m2m.py  nested_prefetch.py  pagination.py  permissions.py  query.py  raw_sql.py  relationships.py  reverse_relationships.py  run_tests.py  search.py  softdelete.py  test_comprehensive.py  test_relationships.py  transaction.py  validation.py
eden_orm_tests/: test_audit.py  test_leaks.py
examples/: 01_hello.py  02_rest_api.py  03_web_app.py  04_authentication.py  05_advanced_orm.py  06_multi_tenant.py  07_production.py  08_component_showcase.py  09_django_features_demo.py  django_features_demo.py  hello.py  simple_django_demo.py  stable_demo.py  upload_progress_websocket.py
forge_audit_v2/: .dockerignore  README.md  docker-compose.yml  requirements.txt
migrations/: 001_create_password_reset_tokens.sql  env.py  script.py.mako
my_test_project/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  requirements.txt
scratch/: check_tables.py  fix_links.py  test_directives.py  test_forms.py  test_stack_fix.py  verify_admin_automation.py  verify_admin_fix.py  verify_admin_fixes.py
scripts/: test_csrf_flow.py
templates/: broken.html  demo_features.html  demo_home.html  demo_htmx.html  demo_stripe.html  demo_tasks.html  demo_tenancy.html  demo_websockets.html  error.html  error_401.html  error_403.html  error_404.html  error_500.html  index.html  showcase.html  support_demo.html  test_error.html  test_undef.html  test_undefined.html
templates_blade/: broken_blade.html
templates_broken/: broken.html
templates_mistake/: mistake.html
test_minimal/: .gitignore  README.md  app.py  eden.json  requirements.txt
test_prod/: .dockerignore  .env.example  Dockerfile  README.md  app.py  docker-compose.yml  eden.json  models.py  requirements.txt  settings.py
tests/: __init__.py  conftest.py  error_page_debug.html  error_page_output.html  real_error_page.html  repro_form_issue.py  repro_tier1_fix.py  repro_tier2_issues.py  test_access_inheritance.py  test_admin.py  test_admin_advanced.py  test_admin_auth.py  test_admin_dashboard.py  test_admin_directive.py  test_admin_options.py  test_app_security.py  test_audit_integration.py  test_auth.py  test_auth_audit.py  test_auth_cli_logic.py  test_auth_complete_layers.py  test_auth_critical_fixes.py  test_auth_passwords.py  test_auth_rbac.py  test_auth_rbac_ownership.py  test_auth_unlink.py  test_background_tasks.py  test_builder_form_factory.py  test_builder_layout.py  test_builder_model_forms.py  test_cache.py  test_cli_refined.py  test_component_security.py  test_components.py  test_config_and_testing.py  test_config_bootstrapping.py  test_config_coercion.py  test_config_debug_fix.py  test_config_pool.py  test_context_lifecycle.py  (+141 more)
tmp_test_project/: main.py  run_eden.py
(+607 files in other folders)
