[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "eden-framework"
version = "0.1.0"
description = "A batteries-included async Python web framework. Django's features, FastAPI's speed, Flask's simplicity."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Eden Contributors" },
]
keywords = ["web", "framework", "async", "asgi", "api"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
]

dependencies = [
    "starlette>=0.37.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.0",
    "click>=8.1.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.9",
    "itsdangerous>=2.1.0",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.20.0",
    "alembic>=1.13.0",
    "argon2-cffi>=23.1.0",
    "PyJWT>=2.10.1",
    "taskiq>=0.11.0",
    "taskiq-redis>=0.5.0",
    "aiofiles>=25.1.0",
    "aioboto3>=15.5.0",
    "aiosmtplib>=5.1.0",
    "stripe>=14.4.0",
    "email-validator>=2.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "ruff>=0.3.0",
]

[project.scripts]
eden = "eden.cli.main:cli"

[project.urls]
Homepage = "https://github.com/eden-framework/eden"
Documentation = "https://eden-framework.dev"
Repository = "https://github.com/eden-framework/eden"

[tool.hatch.build.targets.wheel]
packages = ["eden"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
