[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "eden-framework"
version = "0.1.0"
description = "A batteries-included async Python web framework. Django's features, FastAPI's speed, Flask's simplicity."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    { name = "Eden Contributors" },
]
keywords = ["web", "framework", "async", "asgi", "api"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
]

dependencies = [
    # Core ASGI/Web
    "starlette>=0.37.0",
    "uvicorn[standard]>=0.29.0",
    # Validation & Configuration
    "pydantic>=2.0",
    # CLI & Shell
    "click>=8.1.0",
    # Templating
    "jinja2>=3.1.0",
    # HTTP Utilities
    "python-multipart>=0.0.9",
    "itsdangerous>=2.1.0",
    # ORM & Database
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.20.0",
    "alembic>=1.13.0",
    # Security
    "argon2-cffi>=23.1.0",
    "PyJWT>=2.10.1",
    # File Handling
    "aiofiles>=25.1.0",
    # Validation
    "email-validator>=2.3.0",
    # Background Tasks
    "taskiq>=0.11.0",
    "pytest>=9.0.2",
    "httpx>=0.28.1",
    "passlib>=1.7.4",
    "bcrypt>=5.0.0",
    "rich>=13.7.0",
    "questionary>=2.0.1",
    "python-dotenv>=1.0.1",
    "redis>=7.2.1",
    "taskiq-redis>=1.2.2",
    "pytest-asyncio>=1.3.0",
    "markdown>=3.10.2",
    "ruff>=0.15.4",
]

[project.optional-dependencies]
# Database drivers (pick what you need)
databases = [
    "asyncpg>=0.31.0",      # PostgreSQL
    "aiomysql>=0.2.0",      # MySQL
]

# Payments (Stripe integration)
payments = [
    "stripe>=14.4.0",
]

# Background tasks & queues
tasks = [
    "taskiq-redis>=0.5.0",
]

# Cloud storage (S3, etc.)
storage = [
    "aioboto3>=15.5.0",
    "aiofiles>=25.1.0",
]

# Email/SMTP support
mail = [
    "aiosmtplib>=5.1.0",
]

# AI/Vector support (pgvector)
ai = [
    "pgvector>=0.2.0",
]

# All optional features
all = [
    "asyncpg>=0.31.0",
    "aiomysql>=0.2.0",
    "stripe>=14.4.0",
    "taskiq>=0.11.0",
    "taskiq-redis>=0.5.0",
    "aioboto3>=15.5.0",
    "aiosmtplib>=5.1.0",
    "pgvector>=0.2.0",
]

# Development tools
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "ruff>=0.3.0",
]

[project.scripts]
eden = "eden.cli.main:cli"

[project.urls]
Homepage = "https://github.com/eden-framework/eden"
Documentation = "https://eden-framework.dev"
Repository = "https://github.com/eden-framework/eden"

[tool.hatch.build.targets.wheel]
packages = ["eden"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_test_loop_scope = "session"
asyncio_default_fixture_loop_scope = "session"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[dependency-groups]
dev = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.4",
    "pymdown-extensions>=10.21",
]
